2017-02-05 belangeo <belangeo@gmail.com>

    * Added new object: TableFill, continuously fills a table with incoming samples.

2017-02-04 belangeo <belangeo@gmail.com>

    * Added onlyonce argument to Seq object.

2017-01-30 belangeo <belangeo@gmail.com>

    * Added new object: Particle2, An even more full control granular synthesis generator.

2017-01-08 belangeo <belangeo@gmail.com>

    * Added new object: SharedTable, an inter-process shared memory table.

2017-01-07 belangeo <belangeo@gmail.com>

    * Jack ports activation and auto-connection now happen in the boot process.

2016-12-17 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.2.

2016-12-17 belangeo <belangeo@gmail.com>

    * Fixed bug in Bendin value. Fixed midi input events handling. Set 
      interpolation to off by default for midi continuous controllers.

2016-12-17 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed a bug in the documentation window.

2016-12-17 belangeo <belangeo@gmail.com>

    * TrigFunc and Pattern now accept tuple as arg argument (fixed issue #90).

2016-12-15 belangeo <belangeo@gmail.com>

    * Fixed portaudio suggested latency for realtime performance.

2016-12-08 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.1.

2016-12-08 belangeo <belangeo@gmail.com>

    * Iter now accepts PyoObjects in its list of values.

2016-12-08 belangeo <belangeo@gmail.com>

    * Iter now sends a thrigger when it reaches the last value.

2016-11-25 belangeo <belangeo@gmail.com>

    * SigTo ramp time now can be controlled at audio rate (issue #87).

2016-11-23 belangeo <belangeo@gmail.com>

    * Added __iter__(), __next__() and next() (python 2 compatibility) methods 
      to PyoBaseObject.

2016-11-22 belangeo <belangeo@gmail.com>

    * Added reset method to various objects (AllpassWG, Chorus, Freeverb, 
      Harmonizer, STRev, WGVerb, Waveguide).

2016-11-16 belangeo <belangeo@gmail.com>
