@@ -1,3 +1,9 @@
+2017-02-07 belangeo <belangeo@gmail.com>
+
+    * Added maxwindow argument to TableWrite. This is the maximum number of samples
+      over which the object is allowed to interpolate. Useful to avoid interpolation
+      over the entire table when using a circular writing pointer.
+
 2017-02-05 belangeo <belangeo@gmail.com>
 
     * Added new object: TableFill, continuously fills a table with incoming samples.
